# EXkururuXDR

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.4stack.md  README.en.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: PACKAGING.md  README.md
docs/contracts/: common_security_event_schema_v1.md
docs/contracts/schemas/: common_security_event_v1.schema.json
docs/contracts/schemas/examples/: common_security_event_v1_edr.json  common_security_event_v1_ndr.json  common_security_event_v1_xdr_import.json
docs/correlation_rules/: sample_rules.yml
rust_chain_bench/: Cargo.toml
rust_chain_bench/src/: main.rs
scripts/: acceptance_gate.sh  benchmark_chain_py_vs_rust.py  benchmark_chain_python.py  benchmark_e2e.py  correlation_quality_gate.py  run_acceptance_gate_with_server.sh  run_orchestrator_check_with_server.sh  run_smoke_with_server.sh  smoke_api.sh  smoke_api_py.py  validate_common_security_event_v1.py
src/exkururuxdr/: __init__.py  api.py  cli.py  correlation.py  io.py  ipros_adapter.py  models.py  orchestrator.py  replay_cache.py  rules.py  storage.py  storage_facade.py  validation.py
tests/: test_api.py  test_correlation.py  test_correlation_quality_gate.py  test_replay_cache.py
